syntax = "proto3";
package thesixnetwork.sixprotocol.nftmngr;

option go_package = "github.com/thesixnetwork/six-protocol/x/nftmngr/types";

message MapTokenToMinter {
  string token_id = 1;
  string minter = 2;
}

message MetadataCreator {
  string nftSchemaCode = 1;
  repeated MapTokenToMinter metadataMintedBy = 2;
}
